# xStandard

./: .gitignore  PROGRESS_REPORT.md  README.md  _smoke_test_patterns.py  check_imports.py  pyproject.toml  write_factory.py
documents/: architecture-c4.md  procedural-architecture.md
fault_mapper/: __init__.py
fault_mapper/adapters/: __init__.py
fault_mapper/application/: __init__.py  _module_persistence_base.py  _module_validator_base.py  _shared_helpers.py  _validation_helpers.py  async_fault_batch_processing_service.py  async_persistence_service.py  async_procedural_batch_processing_service.py  async_procedural_module_persistence_service.py  async_reconciliation_service.py  async_review_service.py  fault_batch_processing_service.py  fault_header_builder.py  fault_isolation_mapper.py  fault_mapping_use_case.py  fault_mode_router.py  fault_module_assembler.py  fault_module_persistence_service.py  fault_module_reconciliation_service.py  fault_module_review_service.py  fault_module_validator.py  fault_reporting_mapper.py  fault_schematic_correlator.py  fault_section_selector.py  fault_table_classifier.py  procedural_batch_processing_service.py  procedural_document_classifier.py  procedural_header_builder.py  procedural_mapping_use_case.py  procedural_module_assembler.py  procedural_module_persistence_service.py  procedural_module_validator.py  procedural_reference_extractor.py  procedural_requirement_extractor.py  procedural_section_organizer.py  procedural_step_extractor.py
fault_mapper/domain/: __init__.py  enums.py  models.py  ports.py  (+5 more)
tests/: conftest.py
(+111 files in other folders)
