[project]
name = "fault-mapper"
version = "0.1.0"
description = "Hybrid mapper: DocumentPipelineOutput → canonical S1000D Fault Data Module"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
mongo = [
    "pymongo>=4.0",
]
integration = [
    "pymongo>=4.0",
    "testcontainers[mongo]>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
